--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
-<!doctype html>
-
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <!-- <script src="script.js"></script>
+    <script src="LinkedLists.js"></script>
+    <script src="LinkedList1.js"></script> -->
+    <!-- <script src="AddLinkedLists.js"></script>
+    <script src="RomanToInteger.js"></script> -->
+    <script src="CommonPrefix.js"></script>
 </head>
-
 <body>
-  <script src="script.js"></script>
+    
 </body>
 </html>
