adding more exercises

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="LinkedList1.js"></script> -->
     <!-- <script src="AddLinkedLists.js"></script>
     <script src="RomanToInteger.js"></script> -->
-    <script src="CommonPrefix.js"></script>
+    <!-- <script src="CommonPrefix.js"></script> -->
+    <!-- <script src="2DArray.js"></script> -->
+    <!-- <script src="RobotBounded.js"></script> -->
+    <script src="LexicalScope.js"></script>
 </head>
 <body>
     
