adding highest average algorithm

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- <script src="CommonPrefix.js"></script> -->
     <!-- <script src="2DArray.js"></script> -->
     <!-- <script src="RobotBounded.js"></script> -->
-    <script src="LexicalScope.js"></script>
+    <script src="HighestAverage.js"></script>
 </head>
 <body>
     
