Adding solution for left rotation but there is two edge cases that fail :(

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="CommonPrefix.js"></script> -->
     <!-- <script src="2DArray.js"></script> -->
     <!-- <script src="RobotBounded.js"></script> -->
-    <script src="HighestAverage.js"></script>
+    <!-- <script src="HighestAverage.js"></script> -->
+    <script src="ArrayLeftRotation.js"></script>
 </head>
 <body>
     
