add more challenges

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <!-- <script src="2DArray.js"></script> -->
     <!-- <script src="RobotBounded.js"></script> -->
     <!-- <script src="HighestAverage.js"></script> -->
-    <script src="ArrayLeftRotation.js"></script>
+    <!-- <script src="ImplementStrStr.js"></script> -->
+    <!-- <script src="Qualified.js"></script> -->
+    <!-- <script src="Pyramid.js"></script> -->
+    <script src="AddStrings.js"></script>
 </head>
 <body>
     
