--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- <script src="ImplementStrStr.js"></script> -->
     <!-- <script src="Qualified.js"></script> -->
     <!-- <script src="Pyramid.js"></script> -->
-    <script src="MaxChar.js"></script>
+    <script src="SmallestSubarray.js"></script>
 </head>
 <body>
     
